basic html and some css added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andy Hopwood - web developer</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <h1>Andy Hopwood</h1>
+    <h4>Web Application developer</h4>
+
+    <span>site coming soon</span>
+</body>
+</html>
+<!--
+
     <header>
         <span class="nameLogo">Andy Hopwood</span>
         <nav>
@@ -28,5 +36,4 @@
         <section id="about"></section>
         <section id="work"></section>
     </main>
-</body>
-</html>
+-->
