--- a/index.html
+++ b/index.html
@@ -8,32 +8,36 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <h1>Andy Hopwood</h1>
-    <h4>Web Application developer</h4>
-
-    <span>site coming soon</span>
-</body>
-</html>
-<!--
-
     <header>
-        <span class="nameLogo">Andy Hopwood</span>
-        <nav>
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#about"></a></li>
-                <li><a href="#work"></a></li>
-            </ul>
-            <div id="menuToggle">
-
-            </div>
+        <div class="logo">
+             <img src="assets/images/logo.png" />
+        </div>
+        
+        <nav class="header-nav">
+            <a href="./" class="active">Home</a>
+            <a href="./about.html">About me</a>
+            <a href="./my-work.html">My Work</a>
+            <a href="./random-codings">Random Coding</a>
         </nav>
     </header>
-    <main>
-        <section>
+    <div class="tech-cloud">
+        <span class="tech">HTML</span>
+        <span class="tech">CSS3</span>
+        <span class="tech">JavaScript</span>
+        <span class="tech">CSS</span>
+        <span class="tech">C#</span><br>
+        <span class="tech">ASP.Net</span>
+        <span class="tech">dotnet core</span>
+        <span class="tech">PHP</span>
+        <span class="tech">T-SQL</span>
+        <span class="tech">PLGSQL</span>
+        <span class="tech">VBA</span><br>
+        <span class="tech">MS EXCEL</span>
+        <span class="tech">Xojo</span>
+    </div>
+   <div id="shape">
 
-        </section>
-        <section id="about"></section>
-        <section id="work"></section>
-    </main>
--->
+   </div>
+   
+</body>
+</html>
