increased size of text on tech cloud

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <div class="tech-cloud">
         <span class="tech">HTML</span>
         <span class="tech">CSS3</span>
-        <span class="tech">JavaScript</span>
+        <span class="tech">JavaScript</span><br><br><br>
         <span class="tech">CSS</span>
-        <span class="tech">C#</span><br>
+        <span class="tech">C#</span>
         <span class="tech">ASP.Net</span>
-        <span class="tech">dotnet core</span>
+        <span class="tech">dotnet core</span><br><br><br>
         <span class="tech">PHP</span>
         <span class="tech">T-SQL</span>
         <span class="tech">PLGSQL</span>
-        <span class="tech">VBA</span><br>
+        <span class="tech">VBA</span>
         <span class="tech">MS EXCEL</span>
         <span class="tech">Xojo</span>
     </div>
